# Informatica-Basica

OtrasCosas/: a.out  error.cc
otros-ejercicios/: a.out  average.cc  classification-characters.cc  comparison-of-words.cc  copia-palindromos-de-mierda.cc  counting-a-two.cc  ejercicio_practica_11.txt  equal-to-last-one.cc  fermat-one.cc  fermat-two.cc  first-numbers.cc  harmonic-numbers.cc  intervals-three.cc  intervals-two.cc  leap-year.cc  maximum-three-different.cc  multiples-of-seven.cc  number-of-digits.cc  numbers-in-interval.cc  numero-de-cifras.cc  palindromic-numbers.cc  resta-harmonic.cc  reversed-number.cc  sum-of-squares.cc  three-words.cc  time-decomposition.cc  top-to-bottom.cc  uppercase-lowercase.cc  words-in-odd-position.cc
p04-simple-programs/: 01-coste-carretera.cc  02-euros-a-yenes.cc  03-cantidad-dinero.cc  04-media-calificaciones.cc  05-area-perimetro-cuadrado.cc  06-distancia-puntos.cc  ejercicio1-hipotenusa.cc  ejercicio2-ASCII.cc
p05-pequeños-programas/: arithmetic_operators.cc  boolean_operators.cc  change_case.cc  data_types.cc  ejercicio1-sum_of_squares.cc  ejercicio2-classification.cc  ejercicio3-powers.cc  makefile  references.cc  short_circuit.cc
p06-statements/: Makefile  collatz.cc  cuadrado_asteriscos.cc  dividers.cc  leap_year.cc  longest_shortest.cc  random_numbers.cc  statistics.cc  suma_digitos.cc  suma_tres_digitos.cc  temperatures.cc  time_decomposition.cc
p06-statements/ejercicio1/: Makefile  ejercicio1-primes_range  ejercicio1-primes_range.cc
p07-jutge/: Makefile  ej01-integer-division.cc  ej02-triangle.cc  ej03-maximum-of-three.cc  ej04-how-many-seconds.cc  ej05-add-one-second.cc  ej06-elementos.cc  ej07-intervals.cc  ej08-sum-of-digits.cc  ej09-counting-a.cc  ej10-sequence-of-collatz.cc  ej11-logarithms.cc  ej12-computing-areas.cc
p08-funciones/: Makefile  ej01-three-words.cc  ej02-divisors-in-order.cc  ej03-primality.cc  ej04-looking-for-an-a.cc  ej05-harmonic-numbers.cc  ej06-harmonic-numbers-two.cc  ej07-first-position.cc  ej08-ith.cc  ej09-approximation-of-e.cc  ej10-parentheses.cc  ej11-is-palindrome.cc  ej12-perfect-numbers.cc
p09-funciones2/: Functions2-GHClassroom.md  README.md
p09-funciones2/ej01-equal-to-the-last-one/: Makefile  equal_main.cc  equal_to_the_last_one.cc  equal_to_the_last_one.h  jutge_equal.cc
p09-funciones2/ej02-sequential-search/: Makefile  jutge_sequential.cc  sequential_main.cc  sequential_search.cc  sequential_search.h
p09-funciones2/ej03-counting-frequences/: Makefile  counting_frequences.cc  counting_frequences.h  counting_main.cc  jutge_counting.cc
p09-funciones2/ej04-maximum-sums/: Makefile  jutge_maximum.cc  maximum_main.cc  maximum_sums.cc  maximum_sums.h
p09-funciones2/ej05-sum-of-fractions/: Makefile  jutge_sum.cc  sum_main.cc  sum_of_fractions.cc  sum_of_fractions.h
p09-funciones2/ej06-balanced-numbers/: Makefile  balanced_main.cc  balanced_numbers.cc  balanced_numbers.h  jutge_balanced.cc
p09-funciones2/ej07-maximum-of-each-sequence/: Makefile  jutge_maximum_seq.cc  maximum_main.cc  maximum_of_each_sequence.cc  maximum_of_each_sequence.h
p09-funciones2/ej08-caesar-cipher/: Makefile  caesar_cipher.cc  caesar_cipher.h  caesar_main.cc  jutge_caesar.cc
p09-funciones2/ej09-statistical-measures/: Makefile  jutge_statistical.cc  statistical_main.cc  statistical_measures.cc  statistical_measures.h
p09-funciones2/ej10-increasing-pairs/: Makefile  increasing_main.cc  increasing_pairs.cc  increasing_pairs.h  jutge_increasing.cc
p09-funciones2/ej11-primo-de-mersenne/: Makefile  (+4 more)
p10-ficheros/: Files-Doxygen.md  README.md
p11-gtest/: LICENSE  OOP-GoogleTests.md  README.md  fecha_valida.cc  leap_year.cc  padepurartasks.txt
p11-gtest/fecha/: CMakeLists.txt
p11-gtest/fecha/src/: Makefile  fecha.cc  fecha.h  fecha_main.cc  fechas_main.cc  salida.txt
p11-gtest/fecha/test/: test_fecha.cc
p11-gtest/vector3D/: CMakeLists.txt
p11-gtest/vector3D/src/: Makefile  vector.cc  vector.h  vector_main.cc
p11-gtest/vector3D/test/: test_vector.cc
(+129 files in other folders)
